--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "author": "Splunk",
   "license": "MIT",
   "dependencies": {
+    "fs-extra": "^0.26.5",
+    "ncp": "^2.0.0",
     "shelljs": "^0.6.0",
     "underscore": "^1.8.3",
     "yargs": "^4.2.0"
-  },
-  "devDependencies": {
-    "fs-extra": "^0.26.5"
   }
 }
